# bplot

./: LICENSE.txt  README.md  pyproject.toml
bplot/: __init__.py  annotations.py  b_risk_results.py
examples/: Example 1.ipynb
